--- a/app.json
+++ b/app.json
@@ -17,12 +17,12 @@
     "CHROMEDRIVER_PATH": {
       "description":"DON'T CHANGE 'Chromedriver path' DON'T CHANGE",
       "value": "/app/.chromedriver/bin/chromedriver",
-      "required": false
+      "required": true
     },
     "GOOGLE_CHROME_BIN": {
       "description":"DON'T CHANGE 'Google Chrome path' DON'T CHANGE",
       "value": "/app/.apt/usr/bin/google-chrome",
-      "required": false
+      "required": true
     }
   }
 }
